<resources>
    <string name="app_name">Recorder</string>
    <!--    home-->
    <string name="home_recoder">Voice recoder</string>
    <string name="home_duration">00:00</string>
    <string name="label_recoder">Voice Recorder</string>
    <string name="label_setting">Settings</string>
    <string name="label_library">Library</string>
    <string name="home_clickRecoder">Tap to start recording</string>
    <string name="set_name_dialog">File name null or exits please input again</string>
    <string name="tv_recording_status_on_denied_permission">Please go to setting and permisson</string>


    <!-- Library -->
    <string name="library_name">File name</string>
    <string name="library_location">File location</string>
    <string name="library_size">File size</string>
    <string name="library_time">Creation time</string>
    <string name="library_duration">Duration</string>
    <string name="library_empty">No recording files available !</string>
    <string name="all_title_image">image</string>

    <!-- popop menu-->
    <string name="pp_rename">Rename</string>
    <string name="pp_delete">Delete</string>
    <string name="pp_share">Share</string>
    <string name="pp_editConten">Edit Content</string>
    <string name="pp_setRingTone">Set as ringtone</string>

    <!--    dialog-->
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_rename">Are you sure rename ?</string>

    <!--   detail-->
    <string name="detail_duration">00:00</string>

    <!--    -->
    <string name="bt_choose_director_path">Choose Folder</string>
    <string name="tv_setting_format_type">Format Type</string>
    <string name="tv_setting_quality">Quality</string>
    <string name="rb_fomat_type_mp3">Mp3</string>
    <string name="rb_fomat_type_wav">Wav </string>
    <string name="rb_quality_16kHz">16 kHz (default)</string>
    <string name="rb_quality_22kHz">22 kHz (AM radio)</string>
    <string name="rb_quality_32kHz">32 kHz (FM radio)</string>
    <string name="rb_quality_44kHz">44 kHz (CD highest)</string>

    <string name="search_edit_box">Search</string>

    <string name="button_start_record_activity">Record New</string>

    <string name="sdcard_readonly">Sorry, the SD Card is mounted as read-only and Ringdroid requires it to be writable.</string>
    <string name="no_sdcard">Sorry, Ringdroid can\'t run unless you have an SD Card inserted.</string>
    <string name="sdcard_shared">Sorry, Ringdroid can\'t run while your handset is mounted as a USB device.</string>

    <string name="button_options">Options</string>

    <!--
     Edit activity
     -->

    <!-- Labels next to the start and end time edit boxes -->
    <string name="start_label">Start:</string>
    <string name="end_label">End:</string>

    <string name="edit_intent">Edit</string>

    <string name="time_seconds">seconds</string>

    <!-- After you save a notification or ringtone and have more options
         for what to do with them -->
    <string name="what_to_do_with_ringtone">Saved!  Make this your default ringtone or assign it to a contact?</string>
    <string name="set_default_notification">Saved!  Make this your default notification?</string>

    <string name="make_default_ringtone_button">Make Default</string>
    <string name="choose_contact_ringtone_button">Assign to Contact</string>
    <string name="do_nothing_with_ringtone_button">Close</string>

    <!-- Progress dialog text for loading, recording, or saving... -->
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_recording">Recording…</string>
    <string name="progress_dialog_saving">Saving…</string>
    <string name="progress_dialog_cancel">Cancel</string>
    <string name="progress_dialog_stop">Stop</string>

    <!-- Image button descriptions for accessibility -->

    <string name="start_marker">Start marker</string>
    <string name="end_marker">End marker</string>
    <string name="rewind">Rewind</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="ffwd">Fast forward</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="save_button">Save</string>

    <!--
     Menu items
     -->

    <string name="menu_save">Save</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_about">About</string>
    <string name="menu_show_all_audio">Show All Audio</string>

    <!--
     Context menu items
     -->

    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_default_ringtone">Set as Default Ringtone</string>
    <string name="context_menu_contact">Assign to Contact</string>
    <string name="context_menu_default_notification">Set as Default Notification</string>

    <!--
     File Save dialog
     -->

    <string name="file_save_title">Save As:</string>
    <string name="file_save_button_save">Save</string>
    <string name="file_save_button_cancel">Cancel</string>

    <string name="ringtone_type_label">Type:</string>

    <string name="type_default">Default</string>
    <string name="type_alarm">Alarm</string>
    <string name="type_notification">Notification</string>
    <string name="type_ringtone">Ringtone</string>

    <string name="ringtone_name_label">Name:</string>



    <!--
     Delete confirmation dialog
     -->

    <string name="delete_ringtone">Delete Ringtone</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="delete_notification">Delete Notification</string>
    <string name="delete_music">Delete Music</string>
    <string name="delete_audio">Delete Audio</string>

    <string name="confirm_delete_ringdroid">Are you sure?</string>
    <string name="confirm_delete_non_ringdroid">Are you sure?  This file was not created using Ringdroid!</string>

    <string name="delete_ok_button">Delete</string>
    <string name="delete_cancel_button">Cancel</string>

    <string name="delete_failed">Unable to delete file</string>

    <!--
     Success and error messages
     -->

    <string name="alert_title_success">Success</string>
    <string name="alert_title_failure">Error</string>
    <string name="alert_ok_button">OK</string>
    <string name="alert_yes_button">Yes, please!</string>
    <string name="alert_no_button">No, thanks.</string>

    <string name="save_success_message">Saved!</string>
    <string name="default_ringtone_success_message">Changed default ringtone</string>
    <string name="default_notification_success_message">Changed default notification sound</string>
    <string name="play_error">Unable to play this media file</string>
    <string name="no_unique_filename">Unable to find unique filename</string>
    <string name="record_error">Error recording audio</string>
    <string name="too_small_error">Can\'t save a file that small, try making it longer.</string>
    <string name="write_error">Error writing file</string>
    <string name="read_error">Error reading file</string>

    <string name="no_space_error">Your SD card is full, there is not enough space to save this file.</string>

    <string name="bad_extension_error">Sorry, Ringdroid is not yet able to edit files of type</string>
    <string name="no_extension_error">Sorry, Ringdroid can\'t edit a file if it doesn\'t have an extension like .mp3 or .wav</string>

    <!--
     Choose Contact Activity
     -->

    <string name="choose_contact_title">Assign ringtone to which contact?</string>
    <string name="success_contact_ringtone">Successfully assigned ringtone to:</string>

    <!--
     About
     -->

    <string name="about_title">About Ringdroid</string>
    <string name="about_text"><![CDATA[Use Ringdroid to edit MP3, OGG, WAV, AAC, and AMR audio files and create ringtones, alarms, and notifications from them.\n\nTip: copy audio files to your SD card using a USB cable.\n\nTip: tap anywhere on the waveform to start playing at that position.\n\nTip: while playing, tap the word Start or End to quickly set the start and end markers to the current playback time.\n\nVersion %s\n\nDeveloper: Dominic Mazzoni, Nicolas Faralli\nGraphics: Joseph Wain\nSupport and evangelizing: Eugene Koh\nEnhancements: Dan Klufas\n\nRingdroid is free software, distributed under the Apache 2.0 license.  Source code is on github.com/google/ringdroid\n]]></string>


    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="question_delete">Are you sure to delete ?</string>
    <string name="label_basic_setting">Basic</string>
    <string name="recoder_file_type_setting">Encoding</string>
    <string name="default_file_name_setting">Default File Name</string>
    <string name="recoder_quality_setting">Sample rate</string>
    <string name="location_file_setting">Location of recording</string>
    <string name="success_delete">Delete success !</string>
    <string name="menu_share">Share</string>
    <string name="menu_search">Search</string>
    <string name="search_hint">Search</string>
    <string name="label_quality">Choose sample rate</string>
    <string name="label_file_type">Choose encoding</string>


    <!--    Adapter Library-->

    <!-- Notification -->
    <string name="notifi_title">Audio Record</string>
    <string name="complete_notifi_title">Complete recording, open file?</string>

    <!-- Set Name Record File Dialog -->
    <string name="dialog_set_name_title">New Name</string>
    <string name="dialog_set_name_tv_default">Default</string>
    <string name="dialog_set_name_tv_save">Confirm</string>
    <string name="memory_free">You can recorder for</string>
    <string name="cannot_recodring">Can\'t recording</string>
    <string name="mic_record_is_uses">The record mic is being used by another application !</string>
    <string name="stop_record_is_calling">Pause recording on call</string>


    <!-- Auto save status Dialog -->
    <string name="auto_save_dialog_title">Your phone is shut down and stop record, show file ?</string>
    <string name="auto_save_dialog_cancel">Cancel</string>
    <string name="auto_save_dialog_open">Open</string>


    <!-- Complete Record Dialog -->
    <string name="complete_record_dialog_title">Your file save at :</string>
    <string name="complete_record_cancel">Cancel</string>
    <string name="complete_record_open">Open</string>


    <!-- Setting Activity Dialog -->
    <string name="setting_activity_dialog_title">You need go to setting and perrmission for recording</string>
    <string name="setting_activity_dialog_cancel">Cancel</string>
    <string name="setting_activity_dialog_open">Open</string>
    <string name="is_recording">is recording..</string>


</resources>
