<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:orderInCategory="1">

    <item
        android:id="@+id/pp_edit_item_library"
        android:icon="@drawable/ic_library_menu_editname"
        android:title="@string/pp_rename" />
    <item
        android:icon="@drawable/ic_library_menu_delete"
        android:id="@+id/pp_delete_item_library"
        android:title="@string/pp_delete" />
    <item
        android:icon="@drawable/ic_library_menu_share"
        android:id="@+id/pp_share_item_library"
        android:title="@string/pp_share" />
    <item
        android:icon="@drawable/ic_library_menu_editcontent"
        android:id="@+id/pp_editContent_item_library"
        android:title="@string/pp_editConten" />
    <item
        android:icon="@drawable/ic_library_menu_setasringtone"
        android:id="@+id/pp_setRingTone_item_library"
        android:title="@string/pp_setRingTone" />


</menu>