<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="@dimen/dp20"
    android:orientation="vertical">

    <Button
        android:textSize="@dimen/sp17"
        android:id="@+id/button_make_default"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/grid_line"
        android:text="@string/make_default_ringtone_button"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary" />

    <Button
        android:textSize="@dimen/sp17"

        android:id="@+id/button_choose_contact"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20"
        android:background="@color/grid_line"
        android:text="@string/choose_contact_ringtone_button"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary" />

    <Button
        android:textSize="@dimen/sp17"

        android:id="@+id/button_do_nothing"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20"
        android:background="@color/grid_line"
        android:text="@string/do_nothing_with_ringtone_button"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary" />

</LinearLayout>
