<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:layout_weight="1">


        <com.audiorecorder.voicerecorderhd.editor.customView.WaveformView
            android:id="@+id/waveform"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <com.audiorecorder.voicerecorderhd.editor.customView.MarkerView
            android:id="@+id/startmarker"
            android:nextFocusDown="@+id/endmarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/marker_left"
            android:contentDescription="@string/start_marker" />

        <com.audiorecorder.voicerecorderhd.editor.customView.MarkerView
            android:id="@+id/endmarker"
            android:nextFocusUp="@+id/startmarker"
            android:nextFocusDown="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/marker_right"
            android:contentDescription="@string/end_marker" />

    </RelativeLayout>

    <TextView
        android:id="@+id/info"
        android:nextFocusUp="@+id/endmarker"
        android:nextFocusDown="@+id/play"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <LinearLayout
        style="@style/ToolbarBackground"
        android:layout_width="fill_parent"
        android:layout_height="62dip"
        android:gravity="center" >

        <ImageButton
            android:id="@+id/rew"
            android:layout_width="64dip"
            android:layout_height="52dip"
            android:layout_marginTop="6dip"
            android:layout_marginBottom="6dip"
            style="@android:style/MediaButton"
            android:contentDescription="@string/rewind"
            android:src="@android:drawable/ic_media_previous" />

        <ImageButton
            android:id="@+id/play"
            android:layout_width="71dip"
            android:layout_height="52dip"
            android:layout_marginTop="6dip"
            android:layout_marginBottom="6dip"
            style="@android:style/MediaButton"
            android:contentDescription="@string/play"
            android:src="@android:drawable/ic_media_play" />

        <ImageButton
            android:id="@+id/ffwd"
            android:layout_width="64dip"
            android:layout_height="52dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="6dip"
            android:layout_marginBottom="6dip"
            style="@android:style/MediaButton"
            android:contentDescription="@string/ffwd"
            android:src="@android:drawable/ic_media_next" />

    </LinearLayout>

    <LinearLayout style="@style/HorizontalDividerTop" />
    <LinearLayout style="@style/HorizontalDividerBottom" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="62dip"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mark_start"
            android:layout_width="0dp"
            android:layout_height="31dip"
            android:clickable="true"
            android:gravity="center|start"
            android:labelFor="@+id/starttext"
            android:paddingLeft="@dimen/all_16dp"
            android:text="@string/start_label"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/starttext"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/starttext"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ellipsize="end"
            android:gravity="center"
            android:inputType="number|numberDecimal"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/mark_end"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/mark_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mark_end"
            android:layout_width="0dp"
            android:layout_height="31dip"
            android:clickable="true"
            android:gravity="center|start"
            android:labelFor="@+id/endtext"
            android:paddingLeft="@dimen/all_16dp"
            android:text="@string/end_label"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/endtext"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/starttext"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/endtext"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ellipsize="end"
            android:gravity="center"
            android:inputType="number|numberDecimal"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/mark_end"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
